Added return_pointers and avg_calc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,5 @@ add_executable(struct_arg src/struct_arg.c)
 add_executable(arithmetic_ops src/arithmetic_ops.c)
 add_executable(comp_logic_and src/comp_logic_and.c)
 add_executable(return_statement src/return_statement.c)
+add_executable(avg_calc src/avg_calc.c)
+add_executable(return-pointers src/return_pointers.c)
