Added pointer struct access and quotient remainder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,5 @@ add_executable(comp_logic_and src/comp_logic_and.c)
 add_executable(return_statement src/return_statement.c)
 add_executable(avg_calc src/avg_calc.c)
 add_executable(return-pointers src/return_pointers.c)
+add_executable(pointer_struct_access src/pointer_struct_access.c)
+add_executable(quot-rem src/quot-rem.c)
