Added ASCII character finder and Fibonacci claculator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,5 @@ add_executable(avg_calc src/avg_calc.c)
 add_executable(return-pointers src/return_pointers.c)
 add_executable(pointer_struct_access src/pointer_struct_access.c)
 add_executable(quot-rem src/quot-rem.c)
+add_executable(ascii_char src/ascii_char.c)
+add_executable(fibonacci src/fibonacci.c)
